# cad_to_dagmc

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  environment.yml  first_wall.stp  gmsh_load.py  inboard_cc.stp  inboard_outer_vv.stp  inboard_tank.stp  outboard_cc.stp  outboard_outer_vv.stp  outboard_tank.stp  par.py  par2.py  part_creation.py  plasma.stp  pyproject.toml  setup.cfg  single_volume_thin.vtk  vv.stp
.devcontainer/: Dockerfile
.github/workflows/: anaconda-publish.yml  black.yml  ci_with_benchmarks.yml  ci_with_conda_install.yml  ci_with_install.yml  ci_with_pip_install.yml  conda-build-test.yml  docs.yml  python-publish.yml
0.11.0/: inputs.html  material_tagging.html  quickstart.html
0.11.0/.doctrees/: advanced.doctree  api.doctree  environment.pickle  index.doctree
0.11.0/_modules/: index.html
0.11.0/_sources/: outputs.md
0.11.1/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
0.11.1/.doctrees/: api.doctree  environment.pickle  installation.doctree
0.11.1/_modules/: index.html
0.11.1/_sources/: index.md
0.11.1/_static/: documentation_options.js
0.11.1/advanced/: h5m_backends.html  index.html
0.11.1/inputs/: cadquery_assemblies.html  gmsh_files.html  index.html
0.11.1/material_tagging/: assembly_materials.html  gmsh_physical_groups.html  manual_tags.html
0.11.1/meshing/: index.html  (+2 more)
0.11.2/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
0.11.3/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
0.11.4/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
0.11.5/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
0.11.6/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
0.11.7/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
0.11.8/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
0.11.9/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html
cad_to_dagmc/: __init__.py  _version.py  core.py
conda/: conda_build_config.yaml  meta.yaml
dev/: .buildinfo  advanced.html  api.html  genindex.html  h5m_backends.html  index.html  inputs.html  installation.html  material_tagging.html  meshing_backends.html  objects.inv  outputs.html  quickstart.html  search.html  searchindex.js
docs/: advanced.md  conf.py  index.md  installation.md  material_tagging.md  meshing_backends.md  outputs.md  quickstart.md
examples/: cadquery_assembly.py  cadquery_compound.py  cadquery_object_and_stp_file.py  cadquery_objects_and_stp_files.py  cadquery_text.py  create_dagmc_h5m_geomtry.py  create_stp_files_for_examples.py  curved_cadquery_object.py  curved_cadquery_object_to_dagmc_surface_mesh.py  curved_cadquery_object_to_dagmc_volume_mesh.py  multiple_cadquery_objects.py  multiple_stp_files.py  single_cadquery_object.py  single_sphere.stp  single_stp_file.py  single_stp_file_multiple_volumes.py
linkcheck/: output.json  output.txt
stable/: .buildinfo  advanced.html  api.html  genindex.html  h5m_backends.html  index.html  installation.html  meshing_backends.html  objects.inv  outputs.html  search.html  searchindex.js
tests/: ball_reactor.brep  conftest.py  create_brep_file_for_testing.py  example.py  extrude_rectangle.step  single_cube.step  single_volume_thin.stp  single_volume_thin.vtk  test_assembly_material_tags.py  test_assembly_with_component_tags.py  test_assembly_with_materials.py  test_assembly_with_names.py  test_file_creation.py  test_get_material_tags.py  test_get_volumes.py  test_gmsh_session_cleanup.py  test_h5m_creation.py  test_h5m_in_simulation.py  test_h5m_in_transport.py  test_invalid_material_tags_string.py  test_kwarg_args.py  test_kwargs_functionality.py  test_loading_from_file_vs_shape_object.py  test_match.py  test_mesh_to_dagmc.py  test_model_creation_for_transport.py  test_netgen_backend.py  test_package.py  test_python_api.py  test_resolve_set_size.py  test_resolve_unstructured_volumes.py  test_stp_file_with_assembly_tags.py  test_two_joined_cubes.brep  test_version.py  test_vertices_to_h5m.py  test_write_vtk.py
(+445 files in other folders)
