[metadata]
name = cad_to_dagmc
version = attr: cad_to_dagmc.__version__
author = The cad_to_dagmc Development Team
author_email = mail@jshimwell.com
description = Converts CAD files to a DAGMC h5m file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/cad_to_dagmc
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/cad_to_dagmc
    Tracker = https://github.com/fusion-energy/cad_to_dagmc/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.21.1
    vertices_to_h5m
    scipy
    # moab is required as well but not available on pypi
    # moab can be installed via conda

[options.extras_require]
tests = 
    pytest >= 5.4.3
    dagmc_h5m_file_inspector
    openmc_data_downloader

[flake8]
per-file-ignores = __init__.py:F401
